@@ -177,13 +177,15 @@ static GdkPixbuf*
 load_icon (const gchar *icon_filename)
 {
 	gchar *full_path;
+	gchar *modified_icon_filename; /* FIXME bugzilla 136287 */
 	GdkPixbuf *pixbuf;
 
 	g_return_val_if_fail(icon_filename, NULL);
 
+	modified_icon_filename = g_strconcat(PACKAGE_NAME,icon_filename, NULL);
 	full_path = gnome_program_locate_file (cong_app_get_gnome_program (cong_app_singleton()),
 					       GNOME_FILE_DOMAIN_APP_PIXMAP,
-					       icon_filename,
+					       modified_icon_filename,
 					       FALSE,
 					       NULL);
 
